linking css file

--- a/grid-2.html
+++ b/grid-2.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>Himanshu's Corner</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="grid-2.css">
+		<link rel="stylesheet" href="css/grid-2.css">
 	</head>
 	
 	<body>
